@@ -10,6 +10,7 @@ WinMerge 2.13.19
   Show only "Copy to other side" item in file compare
     context menu (#2600787)
   Expand/collapse folders from keyboard (#2203904)
+  Improve detecting XML files in file compare (#2726531)
   New translation: Persian (#2877121, #3065119)
   New translation: Serbian (#3017674, #3065119)
   Installer: Drop Windows 9x/ME/NT4 support and use Microsoft runtime
